# agentic-adk-a2a-platform

./: .env.example  .gitignore  .mcp.json  Makefile  README.md  agent-framework-spec.md  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  run-dev.cmd  run.cmd
backend/: .dockerignore  .env.example  Dockerfile  interactions.db  interactions.db-shm  interactions.db-wal  pyproject.toml
backend/src/: config.py  main.py
backend/src/agents/: factory.py  loader.py  root_factory.py  schema.py  session_manager.py
backend/src/api/: agents.py  events.py  flows.py  health.py  interactions.py  root_agents.py  tasks.py  tools.py
backend/src/common/: logging.py
backend/src/cost/: tracker.py
backend/src/events/: bus.py
backend/src/features/tasks/: executor.py
backend/src/flow_engine/: context.py  engine.py  parallel.py  retry_manager.py  state_store.py
backend/src/flow_engine/dsl/: parser.py  schema.py  validator.py
backend/src/interactions/: broker.py  models.py  store.py
backend/src/interactions/channels/: __init__.py  base.py  teams.py  web_ui.py  whatsapp.py
backend/src/llm/: provider.py
backend/src/orchestrator/: a2a_client.py  agent_registry.py  root_agent.py
backend/src/routers/: a2a_gateway.py  agents.py  events.py  flows.py  health.py  interactions.py  llm.py  root_agents.py  sessions.py  tasks.py  tools.py  traces.py
backend/src/shared/: logging.py
backend/src/shared/a2a/: flow_wrapper.py  gateway.py
backend/tests/: conftest.py  test_cost_tracker.py  test_flow_engine.py  test_flow_parser.py  test_llm_config.py
(+174 files in other folders)
